# software-start-here

./: .gitignore  Dockerfile  README.md
challenge/: CMakeLists.txt  package.xml
challenge/install/: local_setup.sh  setup.sh
challenge/install/challenge/lib/challenge/: solution
challenge/install/challenge/share/challenge/: local_setup.sh  package.bash  package.sh
challenge/log/: latest_build
challenge/src/: solution.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/challenge/lib/challenge/: listener  my_first_node  solution
install/challenge/share/ament_index/resource_index/package_run_dependencies/: challenge
install/challenge/share/ament_index/resource_index/parent_prefix_path/: challenge
install/challenge/share/challenge/: local_setup.dsv  local_setup.sh  package.sh  package.xml  package.zsh
install/challenge/share/challenge/launch/: turtle_sine_wave_launch.yaml
install/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/log/: latest_build
install/sine_turtle/share/sine_turtle/: package.bash  package.zsh
install/turtlesim/include/turtlesim/action/: rotate_absolute.hpp
install/turtlesim/include/turtlesim/action/detail/: rotate_absolute__type_support.hpp
install/turtlesim/include/turtlesim/msg/: color.hpp  pose.hpp  rosidl_generator_cpp__visibility_control.hpp
install/turtlesim/include/turtlesim/msg/detail/: color__type_support.hpp  pose__type_support.hpp
install/turtlesim/include/turtlesim/srv/: kill.hpp  set_pen.hpp  spawn.hpp  teleport_absolute.hpp  teleport_relative.hpp
install/turtlesim/include/turtlesim/srv/detail/: kill__type_support.hpp  set_pen__type_support.hpp  spawn__type_support.hpp  teleport_absolute__type_support.hpp  teleport_relative__type_support.hpp
install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key  turtlesim_node
install/turtlesim/share/turtlesim/: local_setup.sh  package.sh
launch/: launch.yaml
log/: latest_build
ros2_ws/src/cpp_pub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pub/src/: turtle_publisher.cpp
src/: rough.cpp
src/challenge/: CMakeLists.txt  package.xml  solution.cpp
src/challenge/install/: local_setup.sh  setup.sh
src/challenge/install/challenge/lib/challenge/: solution
src/challenge/install/challenge/share/challenge/: local_setup.sh  package.sh
src/challenge/launch/: _launch.py  sinusoidal_Launcher.py  turtlesim_sine_launch.py  turtlesim_sine_launch.yaml  turtlesim_solution_launch.py
src/challenge/launch/install/: local_setup.sh  setup.ps1  setup.sh
src/challenge/launch/log/: latest_build
src/challenge/log/: latest_build
src/challenge/src/: .solution.cpp.swp  publisher_member_function.cpp  solution.cpp
src/challenge/src/install/: local_setup.sh  setup.sh
src/challenge/src/log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/challenge/lib/challenge/: SineWave  solution
src/install/challenge/share/ament_index/resource_index/package_run_dependencies/: challenge
src/install/challenge/share/ament_index/resource_index/parent_prefix_path/: challenge
src/install/challenge/share/challenge/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/challenge/share/challenge/launch/: launch_challenge.py
src/install/py_launch_example/share/py_launch_example/: package.sh  package.xml
src/log/: latest_build  latest_list
src/sine_turtle/src/: solution.cpp
